; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_aacenc_pred.c_flt16_round.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_aacenc_pred.c_flt16_round.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.av_intfloat32 = type { float }

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (float)* @flt16_round to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @flt16_round(float %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca %union.av_intfloat32, align 4
  store float %0, float* %2, align 4
  %4 = load float, float* %2, align 4
  %5 = bitcast %union.av_intfloat32* %3 to float*
  store float %4, float* %5, align 4
  %6 = bitcast %union.av_intfloat32* %3 to i32*
  %7 = load i32, i32* %6, align 4
  %8 = add i32 %7, 32768
  %9 = and i32 %8, -65536
  %10 = bitcast %union.av_intfloat32* %3 to i32*
  store i32 %9, i32* %10, align 4
  %11 = bitcast %union.av_intfloat32* %3 to float*
  %12 = load float, float* %11, align 4
  ret float %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
